# MLCLI

./: .gitignore  DOCKER_README.md  DOCKER_README_PTBR.md  Dockerfile  README-PTBR.md  README.md  __init__.py  cli.py  docker-compose.yml  entrypoint.sh  ml-cli.sh  mlcli.sh  pyproject.toml  requirements.txt  setup.py
core/: __init__.py  normalization.py  pre_treatment.py  predict_compounds.py  prepare_files.py  train_models.py
data/: prefixo_da_saida_train_test_data.npz
example_files/: active_consolidated.csv  actives_datawarrior.txt  decoys_consolidated.csv  decoys_datawarrior.txt
metrics/: new_model_metrics.csv  prefixo_da_saida_metrics.csv  test_model_metrics.csv
models/: DT_best_model.pkl  LR_best_model.pkl  NB_best_model.pkl  RF_best_model.pkl  SVM_best_model.pkl  XGB_best_model.pkl  minmax_scaler_interest.pkl
