[tool.poetry]
name = "ml-pipeline-cli"
version = "0.1.0"
description = "ML Pipeline CLI tool"
authors = ["PlaceHolderName <name.name@name.com>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "3.8"
click = "^8.0.0"
pandas = "^1.3.0"
numpy = "^1.20.0"
scikit-learn = "^1.0.0"
xgboost = "^1.5.0"
imbalanced-learn = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
mlpipeline = "cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 